--- a/Idle Factory/HUD/HUD Actions Scenes/GameShopScene/GameShopScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions Scenes/GameShopScene/GameShopScene.storyboard
@@ -147,7 +147,7 @@
                                 <rect key="frame" x="0.0" y="137" width="896" height="251"/>
                                 <color key="backgroundColor" name="HudActions-background"/>
                                 <inset key="scrollIndicatorInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m3a-4B-mgd">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m3a-4B-mgd">
                                     <size key="itemSize" width="160" height="225"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -165,7 +165,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="160" height="209"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="FUv-rU-gcX">
-                                                            <rect key="frame" x="10" y="147" width="140" height="15"/>
+                                                            <rect key="frame" x="10" y="150" width="140" height="15"/>
                                                             <subviews>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5b-vw-rb3">
                                                                     <rect key="frame" x="0.0" y="0.0" width="16" height="15"/>
@@ -210,18 +210,18 @@
                                                                 <constraint firstAttribute="height" constant="15" id="Qse-HX-mgh"/>
                                                             </constraints>
                                                         </stackView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="59d-PJ-HhZ">
-                                                            <rect key="frame" x="47" y="175" width="66.5" height="18"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="59d-PJ-HhZ">
+                                                            <rect key="frame" x="30" y="178" width="100" height="15"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="rLh-s4-yYu">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="26" height="18"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="26" height="15"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="18" id="Kgy-uU-GjZ"/>
                                                                         <constraint firstAttribute="width" constant="26" id="Z4z-w6-Xeh"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDh-yI-08t">
-                                                                    <rect key="frame" x="31" y="0.5" width="35.5" height="17"/>
+                                                                    <rect key="frame" x="36" y="0.0" width="64" height="15"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -229,7 +229,11 @@
                                                             </subviews>
                                                         </stackView>
                                                         <skView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tlx-zL-UGs">
-                                                            <rect key="frame" x="8" y="8" width="144" height="131"/>
+                                                            <rect key="frame" x="8" y="8" width="144" height="134"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="144" id="BOt-iq-CMT"/>
+                                                                <constraint firstAttribute="width" secondItem="tlx-zL-UGs" secondAttribute="height" multiplier="72:67" id="zLw-8C-cPh"/>
+                                                            </constraints>
                                                         </skView>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -240,11 +244,11 @@
                                                         <constraint firstItem="tlx-zL-UGs" firstAttribute="leading" secondItem="Wwu-mR-IIJ" secondAttribute="leading" constant="8" id="JI2-0h-zFZ"/>
                                                         <constraint firstAttribute="bottom" secondItem="59d-PJ-HhZ" secondAttribute="bottom" constant="16" id="NCn-vs-4Mi"/>
                                                         <constraint firstItem="FUv-rU-gcX" firstAttribute="leading" secondItem="Wwu-mR-IIJ" secondAttribute="leading" constant="10" id="PWk-XH-ImW"/>
-                                                        <constraint firstItem="59d-PJ-HhZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Wwu-mR-IIJ" secondAttribute="leading" constant="10" id="VWm-mA-yyS"/>
+                                                        <constraint firstItem="59d-PJ-HhZ" firstAttribute="leading" secondItem="Wwu-mR-IIJ" secondAttribute="leading" constant="30" id="VWm-mA-yyS"/>
                                                         <constraint firstAttribute="trailing" secondItem="FUv-rU-gcX" secondAttribute="trailing" constant="10" id="a0c-m1-KAH"/>
                                                         <constraint firstItem="59d-PJ-HhZ" firstAttribute="centerX" secondItem="Wwu-mR-IIJ" secondAttribute="centerX" id="fpI-sw-HHn"/>
                                                         <constraint firstItem="FUv-rU-gcX" firstAttribute="centerX" secondItem="Wwu-mR-IIJ" secondAttribute="centerX" id="iq2-VP-Xvb"/>
-                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="59d-PJ-HhZ" secondAttribute="trailing" constant="10" id="jbO-QK-vUJ"/>
+                                                        <constraint firstAttribute="trailing" secondItem="59d-PJ-HhZ" secondAttribute="trailing" constant="30" id="jbO-QK-vUJ"/>
                                                         <constraint firstItem="59d-PJ-HhZ" firstAttribute="top" secondItem="FUv-rU-gcX" secondAttribute="bottom" constant="13" id="lcb-IK-15V"/>
                                                     </constraints>
                                                 </view>
