--- a/Idle Factory/PopUp/WelcomeBack.storyboard
+++ b/Idle Factory/PopUp/WelcomeBack.storyboard
@@ -18,49 +18,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="38t-GN-f85">
-                                <rect key="frame" x="234" y="65" width="428" height="288"/>
+                                <rect key="frame" x="234" y="63" width="428" height="288"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Você Ganhou" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TLH-Of-5u4">
-                                        <rect key="frame" x="133" y="30" width="162.5" height="50"/>
+                                        <rect key="frame" x="114" y="30" width="200" height="33.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="QvJ-OI-3vl"/>
+                                            <constraint firstAttribute="width" constant="200" id="8EM-WM-H0d"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cMG-0M-pLs">
-                                        <rect key="frame" x="146.5" y="80" width="135.5" height="50"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cMG-0M-pLs">
+                                        <rect key="frame" x="139" y="93.5" width="150" height="50"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="nUh-QG-vfU">
-                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" secondItem="nUh-QG-vfU" secondAttribute="height" multiplier="1:1" id="pSf-wl-uNy"/>
-                                                </constraints>
+                                                <rect key="frame" x="0.0" y="0.0" width="35" height="50"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[Dinheiro]" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vmf-qD-leu">
-                                                <rect key="frame" x="60" y="0.0" width="75.5" height="50"/>
+                                                <rect key="frame" x="45" y="0.0" width="105" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="lb6-Nf-URo"/>
+                                            <constraint firstAttribute="width" constant="150" id="ApY-37-1dA"/>
+                                            <constraint firstAttribute="height" constant="50" id="M1v-fC-sQ3"/>
                                         </constraints>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="enquanto esteve longe da cidade" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dM-cT-kcZ">
-                                        <rect key="frame" x="100" y="130" width="228" height="83"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n3M-Tr-esz">
-                                        <rect key="frame" x="170.5" y="228" width="87" height="21"/>
+                                        <rect key="frame" x="170.5" y="242" width="87" height="21"/>
                                         <color key="backgroundColor" red="0.1053651944" green="0.65286397929999995" blue="0.82748192549999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="87" id="Ljl-dA-sBT"/>
-                                            <constraint firstAttribute="height" constant="21" id="XoH-1q-yvg"/>
+                                            <constraint firstAttribute="width" constant="87" id="3bx-6p-tSc"/>
+                                            <constraint firstAttribute="height" constant="21" id="yNt-ZD-eav"/>
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal">
@@ -70,30 +62,34 @@
                                             <action selector="closePopUp:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="tAE-P2-3cg"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="enquanto esteve longe da cidade" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dM-cT-kcZ">
+                                        <rect key="frame" x="100" y="168.5" width="228" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
-                                    <constraint firstItem="0dM-cT-kcZ" firstAttribute="centerX" secondItem="38t-GN-f85" secondAttribute="centerX" id="2AV-Le-p45"/>
-                                    <constraint firstItem="TLH-Of-5u4" firstAttribute="top" secondItem="38t-GN-f85" secondAttribute="top" constant="30" id="55D-im-baV"/>
-                                    <constraint firstItem="cMG-0M-pLs" firstAttribute="top" secondItem="TLH-Of-5u4" secondAttribute="bottom" id="7O7-Nd-RZ5"/>
-                                    <constraint firstAttribute="trailing" secondItem="0dM-cT-kcZ" secondAttribute="trailing" constant="100" id="8CH-0t-rF6"/>
-                                    <constraint firstAttribute="bottom" secondItem="n3M-Tr-esz" secondAttribute="bottom" constant="39" id="J6d-ZH-MSA"/>
-                                    <constraint firstItem="n3M-Tr-esz" firstAttribute="centerX" secondItem="38t-GN-f85" secondAttribute="centerX" id="K1l-xp-Cxl"/>
-                                    <constraint firstItem="0dM-cT-kcZ" firstAttribute="leading" secondItem="38t-GN-f85" secondAttribute="leading" constant="100" id="KAF-rn-8Kc"/>
-                                    <constraint firstItem="0dM-cT-kcZ" firstAttribute="top" secondItem="cMG-0M-pLs" secondAttribute="bottom" id="UTI-Ah-oTS"/>
-                                    <constraint firstItem="n3M-Tr-esz" firstAttribute="top" secondItem="0dM-cT-kcZ" secondAttribute="bottom" constant="15" id="Vp8-Bj-HrR"/>
-                                    <constraint firstItem="cMG-0M-pLs" firstAttribute="centerX" secondItem="38t-GN-f85" secondAttribute="centerX" id="YU3-bg-8Jx"/>
-                                    <constraint firstItem="TLH-Of-5u4" firstAttribute="centerX" secondItem="38t-GN-f85" secondAttribute="centerX" id="uEg-gS-g7m"/>
+                                    <constraint firstItem="cMG-0M-pLs" firstAttribute="top" secondItem="TLH-Of-5u4" secondAttribute="bottom" constant="30" id="0L5-xk-ROB"/>
+                                    <constraint firstItem="TLH-Of-5u4" firstAttribute="top" secondItem="38t-GN-f85" secondAttribute="top" constant="30" id="4Wh-nG-igg"/>
+                                    <constraint firstAttribute="width" constant="428" id="Ijf-Uk-UG5"/>
+                                    <constraint firstItem="cMG-0M-pLs" firstAttribute="centerX" secondItem="38t-GN-f85" secondAttribute="centerX" id="LYT-x4-P9K"/>
+                                    <constraint firstItem="0dM-cT-kcZ" firstAttribute="top" secondItem="cMG-0M-pLs" secondAttribute="bottom" constant="25" id="SsB-OO-cE8"/>
+                                    <constraint firstAttribute="height" constant="288" id="YHK-N9-cIv"/>
+                                    <constraint firstAttribute="trailing" secondItem="0dM-cT-kcZ" secondAttribute="trailing" constant="100" id="Yqh-kM-CFf"/>
+                                    <constraint firstItem="n3M-Tr-esz" firstAttribute="centerX" secondItem="38t-GN-f85" secondAttribute="centerX" id="cSk-YX-jdC"/>
+                                    <constraint firstAttribute="bottom" secondItem="n3M-Tr-esz" secondAttribute="bottom" constant="25" id="qBj-up-nY3"/>
+                                    <constraint firstItem="TLH-Of-5u4" firstAttribute="centerX" secondItem="38t-GN-f85" secondAttribute="centerX" id="tdG-R1-0gX"/>
+                                    <constraint firstItem="0dM-cT-kcZ" firstAttribute="leading" secondItem="38t-GN-f85" secondAttribute="leading" constant="100" id="wQ9-Xi-tBh"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="38t-GN-f85" secondAttribute="trailing" constant="190" id="2MV-9L-TgC"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="38t-GN-f85" secondAttribute="bottom" constant="40" id="3Ja-lA-pbL"/>
-                            <constraint firstItem="38t-GN-f85" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="190" id="AEz-Bd-p3E"/>
-                            <constraint firstItem="38t-GN-f85" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="65" id="Req-Oe-hRm"/>
+                            <constraint firstItem="38t-GN-f85" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="V9k-Np-FRP"/>
+                            <constraint firstItem="38t-GN-f85" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="pvB-5b-j0F"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="VvO-cf-01N"/>
@@ -111,7 +107,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Coin" width="50" height="43"/>
+        <image name="Coin" width="26" height="18"/>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
