--- a/Idle Factory/UpgradeFactory/UpgradeFactoryScene.storyboard
+++ b/Idle Factory/UpgradeFactory/UpgradeFactoryScene.storyboard
@@ -159,7 +159,7 @@
                                 <rect key="frame" x="73" y="297" width="270" height="27"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOr-wD-CJg">
-                                        <rect key="frame" x="0.0" y="0.0" width="132.5" height="27"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="270" height="27"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -168,8 +168,8 @@
                                             <action selector="moveToInventory:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Ya5-Vk-ysA"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qT3-4n-Y0z">
-                                        <rect key="frame" x="137.5" y="0.0" width="132.5" height="27"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qT3-4n-Y0z">
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="27"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
